pkg/piplayer/assets/css/control.css
body {
  margin: 0;
  background-color: black;
  color: rgba(255,255,255,0.8);
}

td {
  padding: 1.2rem .5rem;
}

.selected {
  color: white;
  background-color: #eba13a;
}

.container {
  padding-bottom: 7.5rem;
  background-color: black;
}

.icon {
  width: 1%;
}

.warning {
  display: none;
  text-align: center;
}

.warning > h1, .warning > h2 {
  font-weight: bolder;
}

#divControls {
  display: grid;
  grid-auto-flow: column;
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  padding: 1rem;
  background-color: black;
  border-top: 1px solid rgba(255, 255, 255, 0.2);
}

#divControls button {
  padding: 1.5rem;
  margin: .1rem;
  height: auto;
  line-height: normal;
}

#divOverlay {
  /* display: grid; */
  align-items: center;
  justify-items: center;
  display: none;
  position: fixed;
  height: 100%;
  width: 100%;
  top: 0;
  color: white;
  background-color: #000B;
}

.button{
  backgrund-color: #eba13a;
  border: 0.1rem solid #eba13a;
}

a{
  color: #eba13a;
}

